--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -6,45 +6,77 @@
 <br>
 <br>
 <br>
-<h1>Index</h1>
 @{
     var role = Context.Session.GetString("Role");
+    var email = Context.Session.GetString("Email");
     if(role == "admin"){
+        <h1>Students</h1>
         <p>
             <a class="btn btn-success" asp-action="Create">Create New Student</a>
         </p>
 
     }
+    else{
+        foreach(var item in Model){
+            if(email == item.Email){
+                <h1>Student: @item.Name</h1>
+                
+            }
+        }
+    }
 
 }
+<hr/>
 <table class="table">
     <thead>
         <tr>
             <th style="width: 20%;">
-                @Html.DisplayNameFor(model => model.Name)
+                Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Phone)
+                Phone
             </th>
             <th style="width: 30%;">
-                @Html.DisplayNameFor(model => model.Email)
+                Email
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
-    var email = Context.Session.GetString("Email");
     @if(email == item.Email){
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                @{
+                    var fullname = item.Name.Split(' ');
+                    var firstName = fullname.FirstOrDefault();
+                    var lastName = fullname.LastOrDefault();
+                    if(fullname.Length > 1){
+                        lastName = fullname.LastOrDefault();
+                        <p>@firstName - @lastName</p> 
+                    }else{
+                        @firstName
+                    }
+                }
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Phone)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
+            <td >
+                @{
+                    if(item.Email != null){
+                        var emailParts = item.Email.Split('@');
+                        var emailName = emailParts[0];
+                        var emailDomain = emailParts[1];
+                        string visibleName = new string(emailName.Take(3).ToArray());
+
+                        // الجزء الأخير من النطاق
+                        var lastDomainPart = emailDomain.Split('.').Last();
+
+                        // الطباعة في سطر واحد:
+                        <text>@visibleName***@@***.@lastDomainPart</text>
+                        } 
+                }
             </td>
             <td>
                 @if(role == "admin"){
