--- a/Views/TheClass/Create.cshtml
+++ b/Views/TheClass/Create.cshtml
@@ -3,10 +3,10 @@
 @{
     ViewData["Title"] = "Create";
 }
-
-<h1>Create</h1>
-
-<h4>TheClass</h4>
+<br>
+<br>
+<br>
+<h1>Create Class</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -19,15 +19,11 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+                <a class="btn btn-dark" asp-controller="Menegar" asp-action="ManagerMenegarClass">Back to List</a>
             </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
