--- a/Views/ClassLectuer/Index.cshtml
+++ b/Views/ClassLectuer/Index.cshtml
@@ -15,10 +15,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.IdClassNavigation)
+                Class
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IdLectuerNavigation)
+                Lectuer
             </th>
         </tr>
     </thead>
