--- a/Views/Lectuer/Index.cshtml
+++ b/Views/Lectuer/Index.cshtml
@@ -48,8 +48,8 @@
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <li><a class="dropdown-item" asp-action="Edit" asp-route-id="@item.Id">Edit</a></li>
-                        <li><a class="dropdown-item"  asp-action="ManagerLectuer" asp-route-idLectuer="@item.Id">Lectuer</a></li>
-                        <li><a class="dropdown-item" asp-action="ManagerTeacherLectuer" asp-route-idLectuer="@item.Id">Teacher</a></li>
+                        <li><a class="dropdown-item"  asp-action="ManagerLectuer" asp-route-idLectuer="@item.Id">Students</a></li>
+                        <li><a class="dropdown-item" asp-action="ManagerTeacherLectuer" asp-route-idLectuer="@item.Id">Teachers</a></li>
                         <li><a class="dropdown-item"  data-id="@item.Id">Delete</a></li>
                     </ul>
                 </div>
