--- a/Views/Menegar/ManagerMenegarStudent.cshtml
+++ b/Views/Menegar/ManagerMenegarStudent.cshtml
@@ -19,6 +19,8 @@
         <tr>
             <th >Name</th>
             <th >Class</th>
+            <th >Avg</th>
+            <th >Attendance</th>
             <th >Options</th>
         </tr>
     </thead>
@@ -46,15 +48,22 @@
                         <a class="btn btn-success" asp-controller="Menegar" asp-action="AddStudentWithClass" asp-route-idstudent="@student.IdStudent">Add Student</a>
                     }
                 </td>
-                
+                <td >
+                    @student.Average%
+                </td>
+                <td >
+                    @student.Day / @student.TotalDay
+                </td>
                 <td class="w-25 w-sm-40">
                     <div class="dropdown">
                         <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                             Manager
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="btn btn-primary" asp-controller="Student" asp-action="Details" asp-route-id="@student.IdStudent">Details</a>
-                            <a class="btn btn-danger delete" data-id="@student.IdStudent">Delete</a>
+                            <li><a class="dropdown-item" asp-controller="Student" asp-action="Details" asp-route-id="@student.IdStudent">Details</a></li>
+                            <li><a class="dropdown-item" asp-controller="Grades" asp-action="Index" asp-route-studentId="@student.IdStudent">Marks</a></li>
+                            <li><a class="dropdown-item delete" data-id="@student.IdStudent">Delete</a></li>
+                            
                         </ul>
                     </div>
                 </td>
