--- a/Views/Attendance/Delete.cshtml
+++ b/Views/Attendance/Delete.cshtml
@@ -12,22 +12,28 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PresentDays)
+            @Html.DisplayNameFor(model => model.AttendanceStatus)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PresentDays)
+            @Html.DisplayFor(model => model.AttendanceStatus)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AbsentDays)
+            @Html.DisplayNameFor(model => model.DateAndTime)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AbsentDays)
+            @Html.DisplayFor(model => model.DateAndTime)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TotalDays)
+            @Html.DisplayNameFor(model => model.Excuse)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TotalDays)
+            @Html.DisplayFor(model => model.Excuse)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IdLectuerNavigation)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IdLectuerNavigation.Id)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdStudentNavigation)
@@ -35,10 +41,16 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IdStudentNavigation.Id)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IdTeacherNavigation)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IdTeacherNavigation.Id)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="AttendanceId" />
+        <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
